fixing a the stretch image bug with safari

--- a/style.css
+++ b/style.css
@@ -69,17 +69,25 @@ body {
 /* cookie listing */
 
 .item {
-	display: flex;
+	display: block;
+	position: relative;
 	padding: 15px 0;
+}
+
+.item:after {
+	content: '';
+	display: block;
+	clear: both;
 }
 
 .item-image {
 	max-width: 200px;
 	height: auto;
+	display: block; float: left;
 }
 
 .item-content {
-	padding-left: 10px;
+	padding-left: 210px;
 }
 
 .addCart{
@@ -219,6 +227,8 @@ body {
 	
 	.item-image {
 		max-width: 100%;
+		float: none;
+		padding-bottom: 10px;
 	}
 	
 	.item-content {
